crates/reinhardt-core/macros/tests/ui/app_config/fail/direct_derive.stderr
error: Direct use of #[derive(AppConfig)] is not allowed. Use #[app_config(name = "...", label = "...")] instead.
  --> tests/ui/app_config/fail/direct_derive.rs:21:12
   |
21 | pub struct DirectDeriveConfig;
   |            ^^^^^^^^^^^^^^^^^^
